--- a/phase1Project/bio/bio.css
+++ b/phase1Project/bio/bio.css
@@ -17,7 +17,7 @@ header {
 }
 
 .profile-img {
-    width: 600px;
+    width: 700px;
     height: auto;
     border-radius: 10px;
     border: 10px solid #000;
@@ -26,6 +26,7 @@ header {
 .contact {
     display: flex;
     justify-content: center;
+    padding-top: 50px;
 }
 
 a:hover {
@@ -34,19 +35,33 @@ a:hover {
 }
 
 .bio {
+    padding-top: 50px;
     text-align: left;
-    margin-left: 30px;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+.bio-content{
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 .projects {
     text-align: left;
     margin-left: 30px;
+    margin-left: 300px;
+    margin-right: 300px;
+    padding-top: 30px;
 }
-
+.contact-title{
+    font-weight: bold;
+}
+/* 
 .project-list {
 
-    margin-left: 30px;
-}
+    margin-left: 50px;
+} */
+.para{padding-top: 30px;}
 
 .carl-desc{
     text-indent: 40px;
@@ -54,7 +69,7 @@ a:hover {
     font-size: large;
     border: 2px solid #000;
     color: blue;
-    margin-left: 30px;
+    /* margin-left: 30px; */
 }
 
 .carl-desc::first-letter{
@@ -72,8 +87,33 @@ a:hover {
     color: black;
 }
 
-@media (max-width: 600px){
-    #black{
-        display: none;
+@media (max-width: 1200px){
+
+    .carl-desc{
+        font-size: small;
     }
+
+
+.profile-img {
+    width: 320px;
+}
+
+.bio {
+    padding-top: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.projects {
+    margin-left: 0px;
+    margin-right: 10px;
+}
+
+.project-list {
+    margin-left: 50px;
+}
+.bio-content{
+    margin-left: 20px;
+    margin-right: 20px;
+}
 }
